--- a/public/manifest.json
+++ b/public/manifest.json
@@ -25,6 +25,10 @@
         "src": "/images/icons/icon-512x512.png",
         "sizes": "512x512",
         "type": "image/png"
+      }, {
+        "src": "/images/icons/RaisedBed.png",
+        "sizes": "128x128",
+        "type": "image/png"
       }],
     "start_url": "/index.html",
     "display": "standalone",
